--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Anurag Mittal <anurag.mittal@scality.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "webworker-threads": "^0.7.17"
   }
 }
